# GENmicon-TUI

./: AGENTS.md  CHANGELOG.md  Cargo.toml  TAKEOVER_PROMPT.md
SPEC_files/: 00_PROJECT_SYSTEM_SPEC.md  01_CLI_DISPATCHER_SPEC.md  02_TUI_APP_RUNTIME_SPEC.md  03_AGENT_ENGINE_SPEC.md  04_LLM_PROVIDER_CLIENT_SPEC.md  05_TOOL_SURFACE_SPEC.md  06_APPROVAL_SANDBOX_MODES_SPEC.md  07_SUBAGENTS_RLM_SPEC.md  08_RUNTIME_API_TASKS_AUTOMATION_SPEC.md  09_CONFIG_PROVIDERS_AUTH_SPEC.md  10_PERSISTENCE_RECOVERY_SPEC.md  11_MCP_SKILLS_HOOKS_MEMORY_SPEC.md  12_LSP_DIAGNOSTICS_SPEC.md  13_GAME_TUI_FRAMEWORK_SPEC.md  14_LOCALIZATION_ACCESSIBILITY_SPEC.md  15_TESTING_RELEASE_OPERATIONS_SPEC.md  README.md  SPEC_TEMPLATE.md  WORKFLOW.md
SPEC_files/game_driver/: 00_DRIVER_SYSTEM_SPEC.md  01_MANIFEST_RESOLUTION_SPEC.md  02_SCRIPT_FUNCTIONS_SPEC.md  03_AGENT_TOPOLOGY_SPEC.md  DRIVER_SPEC_TEMPLATE.md  README.md
SPEC_files/games/: GAME_SPEC_TEMPLATE.md  README.md  reconciliation-demo.md  thirteen-angry-man.md
SPEC_files/goals/: 0510_feature_frameworkofgame.md  0511refactor_core.md
crates/game/: Cargo.toml
crates/game/src/: agents.rs  demo.rs  driver.rs  error.rs  interaction.rs  lib.rs  lookup.rs  manifest.rs  paths.rs  render.rs  save.rs  script.rs  tests.rs
crates/tui/: Cargo.toml
crates/tui-core/: Cargo.toml
crates/tui-core/src/: art.rs  footer.rs  game_console.rs  header.rs  layout.rs  lib.rs  list.rs  panel.rs  text.rs  theme.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  GAME_TUI_FRAMEWORK_SPEC.md  MODES.md  SUBAGENTS.md  TOOL_SURFACE.md
docs/archive/: README.md  (+1 more)
(+159 files in other folders)
