[package]
name = "deepseek-game"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust Game TUI runtime core for manifests, saves, lookup, rendering, and commits"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
starlark = "0.13.0"
thiserror.workspace = true
toml.workspace = true
