[package]
name = "deepseek-tui-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Event-driven TUI state machine scaffold for DeepSeek workspace architecture"

[dependencies]
ratatui = "0.30"
unicode-segmentation = "1.12"
unicode-width = "0.2"
